fix: OOM error when running test in flink ETL