@@ -121,9 +121,8 @@ test {
         exceptionFormat = 'full'
         events = ['passed', 'skipped', 'failed', 'standardOut', 'standardError']
     }
-    minHeapSize = "512m" // initial heap size
-    maxHeapSize = "4096m" // maximum heap size
-    jvmArgs '-XX:MaxPermSize=4096m' // mem argument for the test JVM
+    minHeapSize = "256m" // initial heap size
+    maxHeapSize = "2048m" // maximum heap size
 }
 
 application {
